Add Biome functionality by name
